--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
-.editor-div {
-  height: 200px;
+.app .ql-container {
+  border-bottom-left-radius: 0.5em;
+  border-bottom-right-radius: 0.5em;
+  background: #fefcfc;
 }
