--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,20 @@
   border-bottom-right-radius: 0.5em;
   background: #fefcfc;
 }
+
+.flex-grid {
+  display: flex;
+  flex-wrap: wrap; 
+  padding: 1px; 
+  justify-content: center;
+}
+
+.col {
+  flex: 25%;
+  max-width: 25%; 
+  border: 3px solid black;
+  padding: 1px;
+  margin: 5px;
+  text-align: center;
+  border-radius: 5px;
+}
