makes layout for title form

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,18 @@
   text-align: center;
   border-radius: 5px;
 }
+
+.title-input {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: 16px;
+}
+
+.title-column {
+  flex: 25%;
+  text-align: center;
+  max-width: 25%;
+  padding: 1px;
+  margin: 20px;
+}
