--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,12 @@
   padding: 1px;
   margin: 20px;
 }
+
+.delete-icon {
+  float: right;
+  /* overflow:  */
+}
+
+.clearfix {
+  overflow: auto;
+}
