adds dropdown to list for edit and delete options, enables delete functionality

--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,15 @@
 .clearfix {
   overflow: auto;
 }
+
+.list-title-row {
+  display: flex;
+}
+
+.list-title-column {
+  flex: 90%;
+}
+
+.list-option-column {
+  flex: 10%;
+}
